# AI-agent

./: .gitignore  IMPLEMENTATION_COMPLETE.md  README.md  SERPER_INTEGRATION_SUMMARY.md  SERPER_SETUP_GUIDE.md  pyproject.toml  requirements.txt
src/bank_of_israel_ai/: __init__.py  __main__.py  web_server.py
src/bank_of_israel_ai/agents/: __init__.py  procurement_agent.py
src/bank_of_israel_ai/static/: script.js  style.css
src/bank_of_israel_ai/templates/: index.html
src/bank_of_israel_ai/tests/: test_email_sending.py  test_llm_connection.py
src/bank_of_israel_ai/tools/: __init__.py  email_tool.py  search_tool.py
