[project]
name = "bank_of_israel_ai"
version = "0.1.0"
description = "A minimal Python project scaffold for Bank of Israel AI initiatives."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pytest>=7.0",
  "googlesearch-python>=1.3.0",
  "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
crewai = ["crewai>=0.11.2"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
